puto/parser.out
Created by PLY version 3.6 (http://www.dabeaz.com/ply)

Unused terminals:

    MULTILINE_COMMENT
    COND_OP
    NULL
    LINE_COMMENT

Grammar

Rule 0     S' -> start
Rule 1     start -> external_declaration main external_declaration
Rule 2     external_declaration -> assignment_expression external_declaration
Rule 3     external_declaration -> fxn_var_statement external_declaration
Rule 4     external_declaration -> empty
Rule 5     main -> MAIN LPAREN empty RPAREN compound_statement
Rule 6     fxn_var_statement -> fxn_prot
Rule 7     fxn_var_statement -> fxn_definition
Rule 8     declaration -> init_declarator_list SEMI
Rule 9     declaration_list -> declaration
Rule 10    declaration_list -> declaration_list declaration
Rule 11    init_declarator_list -> init_declarator
Rule 12    init_declarator_list -> init_declarator_list COMMA init_declarator
Rule 13    init_declarator -> declarator
Rule 14    init_declarator -> declarator ASSIGN_OP initializer
Rule 15    declarator -> VAR identifier
Rule 16    declarator -> LPAREN declarator RPAREN
Rule 17    declarator -> declarator LBRACKET constant_expression_opt RBRACKET
Rule 18    initializer -> assignment_expression
Rule 19    initializer -> LBRACE initializer_list RBRACE
Rule 20    initializer -> LBRACE initializer_list COMMA RBRACE
Rule 21    initializer_list -> initializer
Rule 22    initializer_list -> initializer_list COMMA initializer
Rule 23    fxn_prot -> fxn_declaration SEMI
Rule 24    fxn_definition -> fxn_declaration compound_statement
Rule 25    fxn_declaration -> VAR identifier LPAREN fxn_prot_args RPAREN
Rule 26    fxn_declaration -> VAR identifier LPAREN empty RPAREN
Rule 27    fxn_prot_args -> identifier COMMA fxn_prot_args
Rule 28    fxn_prot_args -> identifier
Rule 29    statement -> labeled_statement
Rule 30    statement -> expression_statement
Rule 31    statement -> compound_statement
Rule 32    statement -> selection_statement
Rule 33    statement -> iteration_statement
Rule 34    statement -> jump_statement
Rule 35    labeled_statement -> CASE constant_expression COLON statement
Rule 36    labeled_statement -> DEFAULT COLON statement
Rule 37    expression_statement -> expression_opt SEMI
Rule 38    compound_statement -> LBRACE mix_list RBRACE
Rule 39    compound_statement -> LBRACE RBRACE
Rule 40    mix_list -> statement_list
Rule 41    mix_list -> declaration_list
Rule 42    mix_list -> statement_list mix_list
Rule 43    mix_list -> declaration_list mix_list
Rule 44    statement_list -> statement
Rule 45    statement_list -> statement_list statement
Rule 46    selection_statement -> IF LPAREN expression RPAREN statement
Rule 47    selection_statement -> IF LPAREN expression RPAREN statement ELSE statement
Rule 48    selection_statement -> SWITCH LPAREN expression RPAREN statement
Rule 49    iteration_statement -> WHILE LPAREN expression RPAREN statement
Rule 50    iteration_statement -> FOR LPAREN expression_opt SEMI expression_opt SEMI expression_opt RPAREN statement
Rule 51    iteration_statement -> DO statement WHILE LPAREN expression RPAREN SEMI
Rule 52    jump_statement -> CONTINUE SEMI
Rule 53    jump_statement -> BREAK SEMI
Rule 54    jump_statement -> RETURN expression_opt SEMI
Rule 55    expression_opt -> empty
Rule 56    expression_opt -> expression
Rule 57    expression -> print_expression
Rule 58    expression -> expression COMMA print_expression
Rule 59    print_expression -> assignment_expression
Rule 60    print_expression -> PRINT LPAREN scan_expression RPAREN
Rule 61    print_expression -> PRINTLN LPAREN scan_expression RPAREN
Rule 62    assignment_expression -> scan_expression
Rule 63    assignment_expression -> unary_expression ASSIGN_OP assignment_expression
Rule 64    assignment_expression -> unary_expression ADD_ASSIGN assignment_expression
Rule 65    assignment_expression -> unary_expression MIN_ASSIGN assignment_expression
Rule 66    assignment_expression -> unary_expression MUL_ASSIGN assignment_expression
Rule 67    assignment_expression -> unary_expression DIV_ASSIGN assignment_expression
Rule 68    assignment_expression -> unary_expression MOD_ASSIGN assignment_expression
Rule 69    scan_expression -> logical_or_expression
Rule 70    scan_expression -> SCAN LPAREN RPAREN
Rule 71    constant_expression_opt -> empty
Rule 72    constant_expression_opt -> constant_expression
Rule 73    constant_expression -> logical_or_expression
Rule 74    logical_or_expression -> logical_and_expression
Rule 75    logical_or_expression -> logical_and_expression OR logical_or_expression
Rule 76    logical_and_expression -> equality_expression
Rule 77    logical_and_expression -> logical_and_expression AND equality_expression
Rule 78    equality_expression -> relational_expression
Rule 79    equality_expression -> equality_expression EQ relational_expression
Rule 80    equality_expression -> equality_expression NEQ relational_expression
Rule 81    relational_expression -> add_expression
Rule 82    relational_expression -> relational_expression LT add_expression
Rule 83    relational_expression -> relational_expression GT add_expression
Rule 84    relational_expression -> relational_expression LE add_expression
Rule 85    relational_expression -> relational_expression GE add_expression
Rule 86    add_expression -> mult_expression
Rule 87    add_expression -> add_expression ADD_OP mult_expression
Rule 88    add_expression -> add_expression SUB_OP mult_expression
Rule 89    mult_expression -> unary_expression
Rule 90    mult_expression -> mult_expression MULT_OP unary_expression
Rule 91    mult_expression -> mult_expression DIV_OP unary_expression
Rule 92    mult_expression -> mult_expression MOD_OP unary_expression
Rule 93    unary_expression -> postfix_expression
Rule 94    unary_expression -> INC unary_expression
Rule 95    unary_expression -> DEC unary_expression
Rule 96    unary_expression -> SUB_OP add_expression
Rule 97    unary_expression -> NOT logical_or_expression
Rule 98    postfix_expression -> primary_expression
Rule 99    postfix_expression -> postfix_expression LBRACKET expression RBRACKET
Rule 100   postfix_expression -> postfix_expression LPAREN argument_expression_list RPAREN
Rule 101   postfix_expression -> postfix_expression LPAREN RPAREN
Rule 102   postfix_expression -> postfix_expression INC
Rule 103   postfix_expression -> postfix_expression DEC
Rule 104   primary_expression -> identifier
Rule 105   primary_expression -> constant
Rule 106   primary_expression -> LPAREN expression RPAREN
Rule 107   argument_expression_list -> assignment_expression
Rule 108   argument_expression_list -> argument_expression_list COMMA assignment_expression
Rule 109   identifier -> FLOAT_ID
Rule 110   identifier -> INT_ID
Rule 111   identifier -> CHAR_ID
Rule 112   identifier -> STR_ID
Rule 113   identifier -> VOID_ID
Rule 114   constant -> FLOAT_LIT
Rule 115   constant -> INT_LIT
Rule 116   constant -> CHAR_LIT
Rule 117   constant -> STR_LIT
Rule 118   empty -> <empty>

Terminals, with rules where they appear

ADD_ASSIGN           : 64
ADD_OP               : 87
AND                  : 77
ASSIGN_OP            : 14 63
BREAK                : 53
CASE                 : 35
CHAR_ID              : 111
CHAR_LIT             : 116
COLON                : 35 36
COMMA                : 12 20 22 27 58 108
COND_OP              : 
CONTINUE             : 52
DEC                  : 95 103
DEFAULT              : 36
DIV_ASSIGN           : 67
DIV_OP               : 91
DO                   : 51
ELSE                 : 47
EQ                   : 79
FLOAT_ID             : 109
FLOAT_LIT            : 114
FOR                  : 50
GE                   : 85
GT                   : 83
IF                   : 46 47
INC                  : 94 102
INT_ID               : 110
INT_LIT              : 115
LBRACE               : 19 20 38 39
LBRACKET             : 17 99
LE                   : 84
LINE_COMMENT         : 
LPAREN               : 5 16 25 26 46 47 48 49 50 51 60 61 70 100 101 106
LT                   : 82
MAIN                 : 5
MIN_ASSIGN           : 65
MOD_ASSIGN           : 68
MOD_OP               : 92
MULTILINE_COMMENT    : 
MULT_OP              : 90
MUL_ASSIGN           : 66
NEQ                  : 80
NOT                  : 97
NULL                 : 
OR                   : 75
PRINT                : 60
PRINTLN              : 61
RBRACE               : 19 20 38 39
RBRACKET             : 17 99
RETURN               : 54
RPAREN               : 5 16 25 26 46 47 48 49 50 51 60 61 70 100 101 106
SCAN                 : 70
SEMI                 : 8 23 37 50 50 51 52 53 54
STR_ID               : 112
STR_LIT              : 117
SUB_OP               : 88 96
SWITCH               : 48
VAR                  : 15 25 26
VOID_ID              : 113
WHILE                : 49 51
error                : 

Nonterminals, with rules where they appear

add_expression       : 81 82 83 84 85 87 88 96
argument_expression_list : 100 108
assignment_expression : 2 18 59 63 64 65 66 67 68 107 108
compound_statement   : 5 24 31
constant             : 105
constant_expression  : 35 72
constant_expression_opt : 17
declaration          : 9 10
declaration_list     : 10 41 43
declarator           : 13 14 16 17
empty                : 4 5 26 55 71
equality_expression  : 76 77 79 80
expression           : 46 47 48 49 51 56 58 99 106
expression_opt       : 37 50 50 50 54
expression_statement : 30
external_declaration : 1 1 2 3
fxn_declaration      : 23 24
fxn_definition       : 7
fxn_prot             : 6
fxn_prot_args        : 25 27
fxn_var_statement    : 3
identifier           : 15 25 26 27 28 104
init_declarator      : 11 12
init_declarator_list : 8 12
initializer          : 14 21 22
initializer_list     : 19 20 22
iteration_statement  : 33
jump_statement       : 34
labeled_statement    : 29
logical_and_expression : 74 75 77
logical_or_expression : 69 73 75 97
main                 : 1
mix_list             : 38 42 43
mult_expression      : 86 87 88 90 91 92
postfix_expression   : 93 99 100 101 102 103
primary_expression   : 98
print_expression     : 57 58
relational_expression : 78 79 80 82 83 84 85
scan_expression      : 60 61 62
selection_statement  : 32
start                : 0
statement            : 35 36 44 45 46 47 47 48 49 50 51
statement_list       : 40 42 45
unary_expression     : 63 64 65 66 67 68 89 90 91 92 94 95

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . external_declaration main external_declaration
    (2) external_declaration -> . assignment_expression external_declaration
    (3) external_declaration -> . fxn_var_statement external_declaration
    (4) external_declaration -> . empty
    (62) assignment_expression -> . scan_expression
    (63) assignment_expression -> . unary_expression ASSIGN_OP assignment_expression
    (64) assignment_expression -> . unary_expression ADD_ASSIGN assignment_expression
    (65) assignment_expression -> . unary_expression MIN_ASSIGN assignment_expression
    (66) assignment_expression -> . unary_expression MUL_ASSIGN assignment_expression
    (67) assignment_expression -> . unary_expression DIV_ASSIGN assignment_expression
    (68) assignment_expression -> . unary_expression MOD_ASSIGN assignment_expression
    (6) fxn_var_statement -> . fxn_prot
    (7) fxn_var_statement -> . fxn_definition
    (118) empty -> .
    (69) scan_expression -> . logical_or_expression
    (70) scan_expression -> . SCAN LPAREN RPAREN
    (93) unary_expression -> . postfix_expression
    (94) unary_expression -> . INC unary_expression
    (95) unary_expression -> . DEC unary_expression
    (96) unary_expression -> . SUB_OP add_expression
    (97) unary_expression -> . NOT logical_or_expression
    (23) fxn_prot -> . fxn_declaration SEMI
    (24) fxn_definition -> . fxn_declaration compound_statement
    (74) logical_or_expression -> . logical_and_expression
    (75) logical_or_expression -> . logical_and_expression OR logical_or_expression
    (98) postfix_expression -> . primary_expression
    (99) postfix_expression -> . postfix_expression LBRACKET expression RBRACKET
    (100) postfix_expression -> . postfix_expression LPAREN argument_expression_list RPAREN
    (101) postfix_expression -> . postfix_expression LPAREN RPAREN
    (102) postfix_expression -> . postfix_expression INC
    (103) postfix_expression -> . postfix_expression DEC
    (25) fxn_declaration -> . VAR identifier LPAREN fxn_prot_args RPAREN
    (26) fxn_declaration -> . VAR identifier LPAREN empty RPAREN
    (76) logical_and_expression -> . equality_expression
    (77) logical_and_expression -> . logical_and_expression AND equality_expression
    (104) primary_expression -> . identifier
    (105) primary_expression -> . constant
    (106) primary_expression -> . LPAREN expression RPAREN
    (78) equality_expression -> . relational_expression
    (79) equality_expression -> . equality_expression EQ relational_expression
    (80) equality_expression -> . equality_expression NEQ relational_expression
    (109) identifier -> . FLOAT_ID
    (110) identifier -> . INT_ID
    (111) identifier -> . CHAR_ID
    (112) identifier -> . STR_ID
    (113) identifier -> . VOID_ID
    (114) constant -> . FLOAT_LIT
    (115) constant -> . INT_LIT
    (116) constant -> . CHAR_LIT
    (117) constant -> . STR_LIT
    (81) relational_expression -> . add_expression
    (82) relational_expression -> . relational_expression LT add_expression
    (83) relational_expression -> . relational_expression GT add_expression
    (84) relational_expression -> . relational_expression LE add_expression
    (85) relational_expression -> . relational_expression GE add_expression
    (86) add_expression -> . mult_expression
    (87) add_expression -> . add_expression ADD_OP mult_expression
    (88) add_expression -> . add_expression SUB_OP mult_expression
    (89) mult_expression -> . unary_expression
    (90) mult_expression -> . mult_expression MULT_OP unary_expression
    (91) mult_expression -> . mult_expression DIV_OP unary_expression
    (92) mult_expression -> . mult_expression MOD_OP unary_expression

    MAIN            reduce using rule 118 (empty -> .)
    SCAN            shift and go to state 4
    INC             shift and go to state 36
    DEC             shift and go to state 7
    SUB_OP          shift and go to state 32
    NOT             shift and go to state 34
    VAR             shift and go to state 27
    LPAREN          shift and go to state 2
    FLOAT_ID        shift and go to state 5
    INT_ID          shift and go to state 30
    CHAR_ID         shift and go to state 13
    STR_ID          shift and go to state 19
    VOID_ID         shift and go to state 23
    FLOAT_LIT       shift and go to state 31
    INT_LIT         shift and go to state 33
    CHAR_LIT        shift and go to state 12
    STR_LIT         shift and go to state 9

    constant                       shift and go to state 1
    unary_expression               shift and go to state 3
    fxn_var_statement              shift and go to state 6
    scan_expression                shift and go to state 10
    external_declaration           shift and go to state 11
    fxn_declaration                shift and go to state 14
    postfix_expression             shift and go to state 15
    start                          shift and go to state 16
    relational_expression          shift and go to state 17
    fxn_definition                 shift and go to state 18
    fxn_prot                       shift and go to state 20
    logical_or_expression          shift and go to state 21
    empty                          shift and go to state 22
    assignment_expression          shift and go to state 24
    primary_expression             shift and go to state 26
    logical_and_expression         shift and go to state 8
    add_expression                 shift and go to state 28
    equality_expression            shift and go to state 29
    mult_expression                shift and go to state 25
    identifier                     shift and go to state 35

state 1

    (105) primary_expression -> constant .

    LBRACKET        reduce using rule 105 (primary_expression -> constant .)
    LPAREN          reduce using rule 105 (primary_expression -> constant .)
    INC             reduce using rule 105 (primary_expression -> constant .)
    DEC             reduce using rule 105 (primary_expression -> constant .)
    ASSIGN_OP       reduce using rule 105 (primary_expression -> constant .)
    ADD_ASSIGN      reduce using rule 105 (primary_expression -> constant .)
    MIN_ASSIGN      reduce using rule 105 (primary_expression -> constant .)
    MUL_ASSIGN      reduce using rule 105 (primary_expression -> constant .)
    DIV_ASSIGN      reduce using rule 105 (primary_expression -> constant .)
    MOD_ASSIGN      reduce using rule 105 (primary_expression -> constant .)
    MULT_OP         reduce using rule 105 (primary_expression -> constant .)
    DIV_OP          reduce using rule 105 (primary_expression -> constant .)
    MOD_OP          reduce using rule 105 (primary_expression -> constant .)
    ADD_OP          reduce using rule 105 (primary_expression -> constant .)
    SUB_OP          reduce using rule 105 (primary_expression -> constant .)
    LT              reduce using rule 105 (primary_expression -> constant .)
    GT              reduce using rule 105 (primary_expression -> constant .)
    LE              reduce using rule 105 (primary_expression -> constant .)
    GE              reduce using rule 105 (primary_expression -> constant .)
    EQ              reduce using rule 105 (primary_expression -> constant .)
    NEQ             reduce using rule 105 (primary_expression -> constant .)
    OR              reduce using rule 105 (primary_expression -> constant .)
    AND             reduce using rule 105 (primary_expression -> constant .)
    COMMA           reduce using rule 105 (primary_expression -> constant .)
    SEMI            reduce using rule 105 (primary_expression -> constant .)
    SCAN            reduce using rule 105 (primary_expression -> constant .)
    NOT             reduce using rule 105 (primary_expression -> constant .)
    VAR             reduce using rule 105 (primary_expression -> constant .)
    FLOAT_ID        reduce using rule 105 (primary_expression -> constant .)
    INT_ID          reduce using rule 105 (primary_expression -> constant .)
    CHAR_ID         reduce using rule 105 (primary_expression -> constant .)
    STR_ID          reduce using rule 105 (primary_expression -> constant .)
    VOID_ID         reduce using rule 105 (primary_expression -> constant .)
    FLOAT_LIT       reduce using rule 105 (primary_expression -> constant .)
    INT_LIT         reduce using rule 105 (primary_expression -> constant .)
    CHAR_LIT        reduce using rule 105 (primary_expression -> constant .)
    STR_LIT         reduce using rule 105 (primary_expression -> constant .)
    MAIN            reduce using rule 105 (primary_expression -> constant .)
    RPAREN          reduce using rule 105 (primary_expression -> constant .)
    $end            reduce using rule 105 (primary_expression -> constant .)
    RBRACKET        reduce using rule 105 (primary_expression -> constant .)
    RBRACE          reduce using rule 105 (primary_expression -> constant .)
    COLON           reduce using rule 105 (primary_expression -> constant .)


state 2

    (106) primary_expression -> LPAREN . expression RPAREN
    (57) expression -> . print_expression
    (58) expression -> . expression COMMA print_expression
    (59) print_expression -> . assignment_expression
    (60) print_expression -> . PRINT LPAREN scan_expression RPAREN
    (61) print_expression -> . PRINTLN LPAREN scan_expression RPAREN
    (62) assignment_expression -> . scan_expression
    (63) assignment_expression -> . unary_expression ASSIGN_OP assignment_expression
    (64) assignment_expression -> . unary_expression ADD_ASSIGN assignment_expression
    (65) assignment_expression -> . unary_expression MIN_ASSIGN assignment_expression
    (66) assignment_expression -> . unary_expression MUL_ASSIGN assignment_expression
    (67) assignment_expression -> . unary_expression DIV_ASSIGN assignment_expression
    (68) assignment_expression -> . unary_expression MOD_ASSIGN assignment_expression
    (69) scan_expression -> . logical_or_expression
    (70) scan_expression -> . SCAN LPAREN RPAREN
    (93) unary_expression -> . postfix_expression
    (94) unary_expression -> . INC unary_expression
    (95) unary_expression -> . DEC unary_expression
    (96) unary_expression -> . SUB_OP add_expression
    (97) unary_expression -> . NOT logical_or_expression
    (74) logical_or_expression -> . logical_and_expression
    (75) logical_or_expression -> . logical_and_expression OR logical_or_expression
    (98) postfix_expression -> . primary_expression
    (99) postfix_expression -> . postfix_expression LBRACKET expression RBRACKET
    (100) postfix_expression -> . postfix_expression LPAREN argument_expression_list RPAREN
    (101) postfix_expression -> . postfix_expression LPAREN RPAREN
    (102) postfix_expression -> . postfix_expression INC
    (103) postfix_expression -> . postfix_expression DEC
    (76) logical_and_expression -> . equality_expression
    (77) logical_and_expression -> . logical_and_expression AND equality_expression
    (104) primary_expression -> . identifier
    (105) primary_expression -> . constant
    (106) primary_expression -> . LPAREN expression RPAREN
    (78) equality_expression -> . relational_expression
    (79) equality_expression -> . equality_expression EQ relational_expression
    (80) equality_expression -> . equality_expression NEQ relational_expression
    (109) identifier -> . FLOAT_ID
    (110) identifier -> . INT_ID
    (111) identifier -> . CHAR_ID
    (112) identifier -> . STR_ID
    (113) identifier -> . VOID_ID
    (114) constant -> . FLOAT_LIT
    (115) constant -> . INT_LIT
    (116) constant -> . CHAR_LIT
    (117) constant -> . STR_LIT
    (81) relational_expression -> . add_expression
    (82) relational_expression -> . relational_expression LT add_expression
    (83) relational_expression -> . relational_expression GT add_expression
    (84) relational_expression -> . relational_expression LE add_expression
    (85) relational_expression -> . relational_expression GE add_expression
    (86) add_expression -> . mult_expression
    (87) add_expression -> . add_expression ADD_OP mult_expression
    (88) add_expression -> . add_expression SUB_OP mult_expression
    (89) mult_expression -> . unary_expression
    (90) mult_expression -> . mult_expression MULT_OP unary_expression
    (91) mult_expression -> . mult_expression DIV_OP unary_expression
    (92) mult_expression -> . mult_expression MOD_OP unary_expression

    PRINT           shift and go to state 37
    PRINTLN         shift and go to state 38
    SCAN            shift and go to state 4
    INC             shift and go to state 36
    DEC             shift and go to state 7
    SUB_OP          shift and go to state 32
    NOT             shift and go to state 34
    LPAREN          shift and go to state 2
    FLOAT_ID        shift and go to state 5
    INT_ID          shift and go to state 30
    CHAR_ID         shift and go to state 13
    STR_ID          shift and go to state 19
    VOID_ID         shift and go to state 23
    FLOAT_LIT       shift and go to state 31
    INT_LIT         shift and go to state 33
    CHAR_LIT        shift and go to state 12
    STR_LIT         shift and go to state 9

    constant                       shift and go to state 1
    assignment_expression          shift and go to state 39
    unary_expression               shift and go to state 3
    relational_expression          shift and go to state 17
    add_expression                 shift and go to state 28
    print_expression               shift and go to state 40
    postfix_expression             shift and go to state 15
    primary_expression             shift and go to state 26
    mult_expression                shift and go to state 25
    logical_and_expression         shift and go to state 8
    identifier                     shift and go to state 35
    expression                     shift and go to state 41
    logical_or_expression          shift and go to state 21
    equality_expression            shift and go to state 29
    scan_expression                shift and go to state 10

state 3

    (63) assignment_expression -> unary_expression . ASSIGN_OP assignment_expression
    (64) assignment_expression -> unary_expression . ADD_ASSIGN assignment_expression
    (65) assignment_expression -> unary_expression . MIN_ASSIGN assignment_expression
    (66) assignment_expression -> unary_expression . MUL_ASSIGN assignment_expression
    (67) assignment_expression -> unary_expression . DIV_ASSIGN assignment_expression
    (68) assignment_expression -> unary_expression . MOD_ASSIGN assignment_expression
    (89) mult_expression -> unary_expression .

    ASSIGN_OP       shift and go to state 45
    ADD_ASSIGN      shift and go to state 47
    MIN_ASSIGN      shift and go to state 46
    MUL_ASSIGN      shift and go to state 43
    DIV_ASSIGN      shift and go to state 44
    MOD_ASSIGN      shift and go to state 42
    MULT_OP         reduce using rule 89 (mult_expression -> unary_expression .)
    DIV_OP          reduce using rule 89 (mult_expression -> unary_expression .)
    MOD_OP          reduce using rule 89 (mult_expression -> unary_expression .)
    ADD_OP          reduce using rule 89 (mult_expression -> unary_expression .)
    SUB_OP          reduce using rule 89 (mult_expression -> unary_expression .)
    LT              reduce using rule 89 (mult_expression -> unary_expression .)
    GT              reduce using rule 89 (mult_expression -> unary_expression .)
    LE              reduce using rule 89 (mult_expression -> unary_expression .)
    GE              reduce using rule 89 (mult_expression -> unary_expression .)
    EQ              reduce using rule 89 (mult_expression -> unary_expression .)
    NEQ             reduce using rule 89 (mult_expression -> unary_expression .)
    OR              reduce using rule 89 (mult_expression -> unary_expression .)
    AND             reduce using rule 89 (mult_expression -> unary_expression .)
    RPAREN          reduce using rule 89 (mult_expression -> unary_expression .)
    COMMA           reduce using rule 89 (mult_expression -> unary_expression .)
    SEMI            reduce using rule 89 (mult_expression -> unary_expression .)
    SCAN            reduce using rule 89 (mult_expression -> unary_expression .)
    INC             reduce using rule 89 (mult_expression -> unary_expression .)
    DEC             reduce using rule 89 (mult_expression -> unary_expression .)
    NOT             reduce using rule 89 (mult_expression -> unary_expression .)
    VAR             reduce using rule 89 (mult_expression -> unary_expression .)
    LPAREN          reduce using rule 89 (mult_expression -> unary_expression .)
    FLOAT_ID        reduce using rule 89 (mult_expression -> unary_expression .)
    INT_ID          reduce using rule 89 (mult_expression -> unary_expression .)
    CHAR_ID         reduce using rule 89 (mult_expression -> unary_expression .)
    STR_ID          reduce using rule 89 (mult_expression -> unary_expression .)
    VOID_ID         reduce using rule 89 (mult_expression -> unary_expression .)
    FLOAT_LIT       reduce using rule 89 (mult_expression -> unary_expression .)
    INT_LIT         reduce using rule 89 (mult_expression -> unary_expression .)
    CHAR_LIT        reduce using rule 89 (mult_expression -> unary_expression .)
    STR_LIT         reduce using rule 89 (mult_expression -> unary_expression .)
    $end            reduce using rule 89 (mult_expression -> unary_expression .)
    MAIN            reduce using rule 89 (mult_expression -> unary_expression .)
    RBRACKET        reduce using rule 89 (mult_expression -> unary_expression .)
    RBRACE          reduce using rule 89 (mult_expression -> unary_expression .)


state 4

    (70) scan_expression -> SCAN . LPAREN RPAREN

    LPAREN          shift and go to state 48


state 5

    (109) identifier -> FLOAT_ID .

    LBRACKET        reduce using rule 109 (identifier -> FLOAT_ID .)
    LPAREN          reduce using rule 109 (identifier -> FLOAT_ID .)
    INC             reduce using rule 109 (identifier -> FLOAT_ID .)
    DEC             reduce using rule 109 (identifier -> FLOAT_ID .)
    ASSIGN_OP       reduce using rule 109 (identifier -> FLOAT_ID .)
    ADD_ASSIGN      reduce using rule 109 (identifier -> FLOAT_ID .)
    MIN_ASSIGN      reduce using rule 109 (identifier -> FLOAT_ID .)
    MUL_ASSIGN      reduce using rule 109 (identifier -> FLOAT_ID .)
    DIV_ASSIGN      reduce using rule 109 (identifier -> FLOAT_ID .)
    MOD_ASSIGN      reduce using rule 109 (identifier -> FLOAT_ID .)
    MULT_OP         reduce using rule 109 (identifier -> FLOAT_ID .)
    DIV_OP          reduce using rule 109 (identifier -> FLOAT_ID .)
    MOD_OP          reduce using rule 109 (identifier -> FLOAT_ID .)
    ADD_OP          reduce using rule 109 (identifier -> FLOAT_ID .)
    SUB_OP          reduce using rule 109 (identifier -> FLOAT_ID .)
    LT              reduce using rule 109 (identifier -> FLOAT_ID .)
    GT              reduce using rule 109 (identifier -> FLOAT_ID .)
    LE              reduce using rule 109 (identifier -> FLOAT_ID .)
    GE              reduce using rule 109 (identifier -> FLOAT_ID .)
    EQ              reduce using rule 109 (identifier -> FLOAT_ID .)
    NEQ             reduce using rule 109 (identifier -> FLOAT_ID .)
    OR              reduce using rule 109 (identifier -> FLOAT_ID .)
    AND             reduce using rule 109 (identifier -> FLOAT_ID .)
    COMMA           reduce using rule 109 (identifier -> FLOAT_ID .)
    SEMI            reduce using rule 109 (identifier -> FLOAT_ID .)
    RPAREN          reduce using rule 109 (identifier -> FLOAT_ID .)
    SCAN            reduce using rule 109 (identifier -> FLOAT_ID .)
    NOT             reduce using rule 109 (identifier -> FLOAT_ID .)
    VAR             reduce using rule 109 (identifier -> FLOAT_ID .)
    FLOAT_ID        reduce using rule 109 (identifier -> FLOAT_ID .)
    INT_ID          reduce using rule 109 (identifier -> FLOAT_ID .)
    CHAR_ID         reduce using rule 109 (identifier -> FLOAT_ID .)
    STR_ID          reduce using rule 109 (identifier -> FLOAT_ID .)
    VOID_ID         reduce using rule 109 (identifier -> FLOAT_ID .)
    FLOAT_LIT       reduce using rule 109 (identifier -> FLOAT_ID .)
    INT_LIT         reduce using rule 109 (identifier -> FLOAT_ID .)
    CHAR_LIT        reduce using rule 109 (identifier -> FLOAT_ID .)
    STR_LIT         reduce using rule 109 (identifier -> FLOAT_ID .)
    MAIN            reduce using rule 109 (identifier -> FLOAT_ID .)
    $end            reduce using rule 109 (identifier -> FLOAT_ID .)
    RBRACKET        reduce using rule 109 (identifier -> FLOAT_ID .)
    RBRACE          reduce using rule 109 (identifier -> FLOAT_ID .)
    COLON           reduce using rule 109 (identifier -> FLOAT_ID .)


state 6

    (3) external_declaration -> fxn_var_statement . external_declaration
    (2) external_declaration -> . assignment_expression external_declaration
    (3) external_declaration -> . fxn_var_statement external_declaration
    (4) external_declaration -> . empty
    (62) assignment_expression -> . scan_expression
    (63) assignment_expression -> . unary_expression ASSIGN_OP assignment_expression
    (64) assignment_expression -> . unary_expression ADD_ASSIGN assignment_expression
    (65) assignment_expression -> . unary_expression MIN_ASSIGN assignment_expression
    (66) assignment_expression -> . unary_expression MUL_ASSIGN assignment_expression
    (67) assignment_expression -> . unary_expression DIV_ASSIGN assignment_expression
    (68) assignment_expression -> . unary_expression MOD_ASSIGN assignment_expression
    (6) fxn_var_statement -> . fxn_prot
    (7) fxn_var_statement -> . fxn_definition
    (118) empty -> .
    (69) scan_expression -> . logical_or_expression
    (70) scan_expression -> . SCAN LPAREN RPAREN
    (93) unary_expression -> . postfix_expression
    (94) unary_expression -> . INC unary_expression
    (95) unary_expression -> . DEC unary_expression
    (96) unary_expression -> . SUB_OP add_expression
    (97) unary_expression -> . NOT logical_or_expression
    (23) fxn_prot -> . fxn_declaration SEMI
    (24) fxn_definition -> . fxn_declaration compound_statement
    (74) logical_or_expression -> . logical_and_expression
    (75) logical_or_expression -> . logical_and_expression OR logical_or_expression
    (98) postfix_expression -> . primary_expression
    (99) postfix_expression -> . postfix_expression LBRACKET expression RBRACKET
    (100) postfix_expression -> . postfix_expression LPAREN argument_expression_list RPAREN
    (101) postfix_expression -> . postfix_expression LPAREN RPAREN
    (102) postfix_expression -> . postfix_expression INC
    (103) postfix_expression -> . postfix_expression DEC
    (25) fxn_declaration -> . VAR identifier LPAREN fxn_prot_args RPAREN
    (26) fxn_declaration -> . VAR identifier LPAREN empty RPAREN
    (76) logical_and_expression -> . equality_expression
    (77) logical_and_expression -> . logical_and_expression AND equality_expression
    (104) primary_expression -> . identifier
    (105) primary_expression -> . constant
    (106) primary_expression -> . LPAREN expression RPAREN
    (78) equality_expression -> . relational_expression
    (79) equality_expression -> . equality_expression EQ relational_expression
    (80) equality_expression -> . equality_expression NEQ relational_expression
    (109) identifier -> . FLOAT_ID
    (110) identifier -> . INT_ID
    (111) identifier -> . CHAR_ID
    (112) identifier -> . STR_ID
    (113) identifier -> . VOID_ID
    (114) constant -> . FLOAT_LIT
    (115) constant -> . INT_LIT
    (116) constant -> . CHAR_LIT
    (117) constant -> . STR_LIT
    (81) relational_expression -> . add_expression
    (82) relational_expression -> . relational_expression LT add_expression
    (83) relational_expression -> . relational_expression GT add_expression
    (84) relational_expression -> . relational_expression LE add_expression
    (85) relational_expression -> . relational_expression GE add_expression
    (86) add_expression -> . mult_expression
    (87) add_expression -> . add_expression ADD_OP mult_expression
    (88) add_expression -> . add_expression SUB_OP mult_expression
    (89) mult_expression -> . unary_expression
    (90) mult_expression -> . mult_expression MULT_OP unary_expression
    (91) mult_expression -> . mult_expression DIV_OP unary_expression
    (92) mult_expression -> . mult_expression MOD_OP unary_expression

    MAIN            reduce using rule 118 (empty -> .)
    $end            reduce using rule 118 (empty -> .)
    SCAN            shift and go to state 4
    INC             shift and go to state 36
    DEC             shift and go to state 7
    SUB_OP          shift and go to state 32
    NOT             shift and go to state 34
    VAR             shift and go to state 27
    LPAREN          shift and go to state 2
    FLOAT_ID        shift and go to state 5
    INT_ID          shift and go to state 30
    CHAR_ID         shift and go to state 13
    STR_ID          shift and go to state 19
    VOID_ID         shift and go to state 23
    FLOAT_LIT       shift and go to state 31
    INT_LIT         shift and go to state 33
    CHAR_LIT        shift and go to state 12
    STR_LIT         shift and go to state 9
